- retry strategy in PhotoViewer reworked - retry strategy in PlayerViewerFX introduced to fix a bug in MediaPlayer e.g. described in https://stackoverflow.com/questions/74247333/flaky-javafx-error-media-invalid-mediaexception - retry set to 30 in MediaFile - minor tidy up in Cache and MediaFile